# django-cinema-world

./: .flake8  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  env.sample  pyproject.toml  requirements.txt
backend/accounts/: admin.py  backends.py  decorators.py  forms.py  models.py  urls.py  views.py
backend/accounts/api/: urls.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/static/accounts/css/: authorization.css  profile.css
backend/accounts/static/accounts/js/: authorization.js  postActions.js  profile.js  utils.js
backend/accounts/templates/accounts/: orders.html  profile.html
backend/accounts/templates/accounts/includes/: field.html
backend/cinema/: admin.py  models.py  urls.py  views.py
backend/cinema/migrations/: 0001_initial.py  0002_product_created_at_product_updated_at_and_more.py  0003_alter_product_created_at_alter_product_updated_at_and_more.py  0004_product_is_active_product_year.py  0005_alter_product_year.py  0006_product_slug.py  0007_alter_product_slug.py  0008_product_quantity.py  0009_alter_producttranslation_unique_together_and_more.py
backend/cinema/static/admin/js/: deactivate_products.js
backend/cinema/templates/cinema/: base.html  product_detail.html  products.html
backend/config/: logging.py  settings.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/locale/en/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
backend/static/js/: modalManager.js
backend/templates/: base.html
backend/templates/includes/: user_menu.html
(+15 files in other folders)
