[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasyl",email = "vasja112@gmail.com"}
]

[tool.poetry.dependencies]
python = ">=3.12"
asgiref = "^3.11"
django = "^6.0.2"
pillow = "^12.1"
psycopg2-binary = "^2.9"
python-dotenv = "^1.2"
sqlparse = "^0.5"
tzdata = "^2025.3"

[tool.poetry.group.dev.dependencies]
django-extensions = "^4.1"
flake8 = "^7.3"
isort = "^8.0"
mccabe = "^0.7"
pycodestyle = "^2.14"
pyflakes = "^3.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
